# pytest-result-sender

./: .flake8  .gitignore  message_push.py  msg.md  pyproject.toml  pytest.ini  test_abc.py
.github/workflows/: publish_to_pypi.yaml  publish_to_pypi.yml
src/pytest_result_sender/: plugin.py
