[project]
name = "pytest_result_sender"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "Freya", email = "3419669644@qq.com"},
]
dependencies = ["pytest>=8.3.5", "requests>=2.32.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"



[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
[project.entry-points.pytest11]
result_log="pytest_result_sender.plugin"


[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.1.2",
]

[tool.isort]
profile="black"
multi_line_output=2

[tool.black]
exclude='''
/(
  \.git
  |\.hg
  |\.tox
  |venv
  |buck-out
  |build
  |dist
)/
'''

[tool.pdm.scripts]
check={composite=[
    "isort .",
    "black .",
    "flake8 .",
]}

test="pytest"
